read video file from class path